# hnix-lsp

./: .travis.yml  README.md  default.nix  hnix-lsp.cabal  stack.yaml  stack2nix.nix
hnix-lsp/: Main.hs
src/Nix/: LSP.hs
