name:                hnix-lsp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/domenkozar/hnix-lsp#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Domen Kožar
maintainer:          domen@dev.si
copyright:           2018 Domen Kožar
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/domenkozar/hnix-lsp

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings TypeOperators InstanceSigs NoImplicitPrelude
  ghc-options:         -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns
  build-depends:       base >= 4.7 && < 5
                     , haskell-lsp
                     , hslogger
                     , data-default
                     , optparse-applicative
                     , megaparsec
                     , hnix
                     , mtl
                     , lens
                     , stm
                     , protolude
                     , ansi-wl-pprint
                     , text
  exposed-modules:
    Nix.LSP

executable hnix-lsp
  hs-source-dirs:      hnix-lsp
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hnix-lsp
